--- a/assignment01.ipynb
+++ b/assignment01.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,43 +52,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Instrucciones \n",
-        "1. Buscar en Internet un conjunto de datos que utilizará a lo largo del módulo de aprendizaje.\n",
-        "\n",
-        "El conjunto de datos puede provenir de cualquier portal de Internet que maneje datos abiertos o puede obtenerse de una empresa u organización.\n",
-        "El conjunto de datos puede ser sobre cualquier tema, pero cuidando que esté relacionado con un problema social, ambiental o económico.\n",
-        "\n",
-        "2. Redacción de una página, en jupyter notebook, como máximo que incluya lo siguiente:\n",
-        "\n",
-        "El nombre que caracteriza el conjunto de datos.\n",
-        "La organización que lo generó.\n",
-        "Incluya un enlace de Internet donde se puedan descargar el base de datos en línea\n",
-        "Describe el conjunto de datos. ¿Qué datos contiene?\n",
-        "¿Cuáles son algunas de las preguntas de investigación que podría responder con estos datos? Enumere al menos OCHO (no responda las preguntas).\n",
-        "¿Qué actor (empresa, sector de la sociedad, organismo descentralizado, gobierno, etc.) estaría interesado en las preguntas mencionadas que identificó?\n",
-        "\n",
-        "Algunos aspectos a tener en cuenta para la selección del conjunto de datos:\n",
-        "\n",
-        "Asegúrese de que el conjunto de datos sea adecuado para permitir la realización de modelos y análisis estadísticos.\n",
-        "En cuanto a la cantidad de datos, el conjunto de datos debe ser del orden de miles de filas.\n",
-        "Sin embargo, para esta unidad de entrenamiento, evite que el conjunto de datos sea demasiado grande.\n",
-        "Pero mientras podamos realizar análisis en el conjunto de datos, estaremos bien.\n",
-        "Algunas herramientas solo permiten un máximo de un millón de registros, pero los conjuntos de datos del orden de millones de filas ralentizarán la computadora.\n",
-        "Es probable que a medida que avance en el tema, descubra que el conjunto de datos no es lo suficientemente detallado.\n",
-        "En este caso, podrá complementarlo con conjuntos de datos relacionados adicionales.\n",
-        "Por ejemplo, si el conjunto de datos es sobre la demanda de un hotel, se puede complementar con datos como el día de la semana y datos meteorológicos como la temperatura y la humedad relativa.\n",
-        "El conjunto de datos original que encontró debe estar en formato de hoja de cálculo (XLS, XLSX, CSV)."
-      ],
-      "metadata": {
-        "id": "mkguxLqeL0nu"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "#Integrantes del equipo\n",
         "\n",
-        "##Edgar López Valdés A01339939"
+        "##Edgar López Valdés A01339939\n",
+        "##Integrante 2"
       ],
       "metadata": {
         "id": "293ShhoGStog"
@@ -107,22 +75,22 @@
         "\n",
         "**¿Qué datos contiene?**\n",
         "\n",
-        "\n",
-        "\n",
+        "El conjunto de datos contiene 25 columnas, de las cuales algunas están en español y otras en inglés, será necesario recortar las columnas duplicadas al trabajar en el proyecto. Entre los registros encontramos la fecha en que se cometió el delito, la entidad federativa, ciudad, tipo de delito, bien jurídico afectado, subtipo de delito y modalidad. Analizando esta información podemos inferir que tipo se cometen con más frecuencia, que estados son más violentos y que modalidades son comunes. Además de determinar si el crimen ha ido en aumento o no.\n",
         "\n",
         "\n",
         "**¿Cuáles son algunas de las preguntas de investigación que podría responder con estos datos?**\n",
         "\n",
         "\n",
         "\n",
-        "*   List item\n",
-        "*   List item\n",
-        "*   List item\n",
-        "*   List item\n",
-        "*   List item\n",
-        "*   List item\n",
-        "*   List item\n",
-        "*   List item\n",
+        "1.   ¿Se puede esperar un aumento o caída en el nivel de crimen para los próximos años?\n",
+        "2.   ¿Qué tipo de crimen es el más común para cada entidad federativa?\n",
+        "3.   ¿En qué temporadas existen variaciones en el nivel de crimen y a qué se puede deber esto?\n",
+        "4.   ¿Qué relación tiene la modalidad del delito con los bienes jurídicos afectados?\n",
+        "5.   List item\n",
+        "6.   List item\n",
+        "7.   List item\n",
+        "8.   List item\n",
+        "\n",
         "\n",
         " \n",
         " **Actores Interesado**"
@@ -132,11 +100,13 @@
       }
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "B5jNrUetSpPR"
-      }
+        "id": "XaEVtIA4YMK2"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
