Updating Research Questions and Interested Organizations

--- a/assignment01.ipynb
+++ b/assignment01.ipynb
@@ -55,7 +55,7 @@
         "#Integrantes del equipo\n",
         "\n",
         "##Edgar López Valdés A01339939\n",
-        "##Integrante 2"
+        "##Alejandro Juárez Corona A01168444\n"
       ],
       "metadata": {
         "id": "293ShhoGStog"
@@ -86,14 +86,25 @@
         "2.   ¿Qué tipo de crimen es el más común para cada entidad federativa?\n",
         "3.   ¿En qué temporadas existen variaciones en el nivel de crimen y a qué se puede deber esto?\n",
         "4.   ¿Qué relación tiene la modalidad del delito con los bienes jurídicos afectados?\n",
-        "5.   List item\n",
-        "6.   List item\n",
-        "7.   List item\n",
-        "8.   List item\n",
+        "5.   ¿Hay correlación entre la ubicación y los biejes jurídicos afectados?\n",
+        "6.   Considerando que podemos cruzar la información con escolaridad por entidad federativa: ¿Hay alguna relación entre nivel de estudios promedio y cantidad de delitos cometidos?\n",
+        "7.   Considerando que podemos cruzar la información con datos de clima: ¿Afectan los fenómenos meteorológicos los delitos cometidos por homicidio culposo en accidentes de tránsito?\n",
+        "8.   ¿Los robos de vehículo automotor son más comunes estando en el vehículo (ocurre con violencia) o al no tenerlo a la vista (sin violencia)?\n",
         "\n",
         "\n",
         " \n",
-        " **Actores Interesado**"
+        " **Actores Interesados**\n",
+        "\n",
+        "Basandonos en las preguntas propuestas podemos identificar varios actores interesados en responderlas, ya sea para beneficio público o de particulares. Enlistamos los posibles actores interesados por pregunta:\n",
+        "\n",
+        "1.   Público en general y gobierno.\n",
+        "2.   Público en general y gobierno.\n",
+        "3.   Público en general y gobierno.\n",
+        "4.   Gobierno, Compañías de seguros.\n",
+        "5.   Gobierno, Compañías de seguros.\n",
+        "6.   Gobierno, entidades educativas públicas y privadas.\n",
+        "7.   Público en general, gobierno.\n",
+        "8.   Público en general, gobierno, Compañías de seguros"
       ],
       "metadata": {
         "id": "SHQcBVGAMD10"
