--- a/assignment01.ipynb
+++ b/assignment01.ipynb
@@ -86,7 +86,7 @@
         "2.   ¿Qué tipo de crimen es el más común para cada entidad federativa?\n",
         "3.   ¿En qué temporadas existen variaciones en el nivel de crimen y a qué se puede deber esto?\n",
         "4.   ¿Qué relación tiene la modalidad del delito con los bienes jurídicos afectados?\n",
-        "5.   ¿Hay correlación entre la ubicación y los biejes jurídicos afectados?\n",
+        "5.   ¿Hay correlación entre la ubicación y los bienes jurídicos afectados?\n",
         "6.   Considerando que podemos cruzar la información con escolaridad por entidad federativa: ¿Hay alguna relación entre nivel de estudios promedio y cantidad de delitos cometidos?\n",
         "7.   Considerando que podemos cruzar la información con datos de clima: ¿Afectan los fenómenos meteorológicos los delitos cometidos por homicidio culposo en accidentes de tránsito?\n",
         "8.   ¿Los robos de vehículo automotor son más comunes estando en el vehículo (ocurre con violencia) o al no tenerlo a la vista (sin violencia)?\n",
