--- a/Semana3Actividad1.ipynb
+++ b/Semana3Actividad1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNbO4k4O7DAiOSi9wWUO+GH",
+      "authorship_tag": "ABX9TyNt1H85SJ2ucE64pIYbYemL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +45,7 @@
       "source": [
         "Parte 1: Fundamentos de bases de datos\n",
         "Las bases de datos son una herramienta fundamental en todas las industrias, apoyan con la persistencia de datos por una parte, pero aún más importante es que relacionan la información, dandole así cierta lógica y un sinfin de usos. Existen las relacionales (SQL) y no relacionales (no llevan un mismo orden como el caso de MongoDB). Normalmente las bases se componen de tablas que representan un componente con determinados atributos o columnas y cada uno de los registros contenidos en estas tablas es una fila. Es posible utilizar operacions DML para modificar o consultar el contenido de las tablas, o incluso para realizar operaciones que involucren varias tablas. Una manera común de representar estas interacciones es a través de un diagrama ERD (Entidad Relación).\n",
-        "En cuanto a la limpieza de datos, es sumamente importante realizar algún tipo de preprocesamiento si los datos se encuentran en crudo Si tenemos un conjunto de datos con basura, seguramente las predicciones de los módelos contendrán basura también. Un ejemplo de lipieza que se debe hacer es obtener los datos faltantes o modelarlos si es que se da el tipo de MNAR, esto se puede llevar a cabo a través de eliminación por fila, por pares, se sustituyen los espacios en blanco por valor medio del conjunto o incluso se puede realizar una sustituciób de los valores por algunos valores que aparentemente serían correctos. En cuanto al ruido que también se debe limpiar existen herramientas como el box plot o agrupación donde al identificar limites, outliers o comportamientos intercuartiles se pueden ir haciendo ajustes para suavizar los resultados finales del modelo."
+        "En cuanto a la limpieza de datos, es sumamente importante realizar algún tipo de preprocesamiento si los datos se encuentran en crudo Si tenemos un conjunto de datos con basura, seguramente las predicciones de los módelos contendrán basura también. Un ejemplo de limpieza que se debe hacer es obtener los datos faltantes o modelarlos si es que se da el tipo de MNAR, esto se puede llevar a cabo a través de eliminación por fila, por pares, se sustituyen los espacios en blanco por valor medio del conjunto o incluso se puede realizar una sustituciób de los valores por algunos valores que aparentemente serían correctos. En cuanto al ruido que también se debe limpiar existen herramientas como el box plot o agrupación donde al identificar limites, outliers o comportamientos intercuartiles se pueden ir haciendo ajustes para suavizar los resultados finales del modelo."
       ],
       "metadata": {
         "id": "QVdz4AjGiEB0"
@@ -387,14 +387,15 @@
     {
       "cell_type": "code",
       "source": [
-        "#Verificanmos datos faltantes\n",
+        "#Verificamos datos faltantes\n",
         "\n",
         "df.isnull().values.any()\n",
         "#True si existen"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "-H9nuQJAlyoc",
         "outputId": "8cc2a437-f5de-4ae0-d104-ede456b5262f"
@@ -421,7 +422,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "DS_8206smBVj",
         "outputId": "1b405199-3d7a-4f1b-f9ff-4089cb580e00"
@@ -939,7 +941,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "_7kJ9NVZmzh0",
         "outputId": "f2a1bc14-0fe6-4e65-b6c1-8a300b2bb393"
@@ -969,7 +972,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "YkBgP_akm1Lw",
         "outputId": "6b0bafd9-79d8-489a-9d44-b71e2d6ce975"
@@ -1665,7 +1669,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "OzBPxafbuWan",
         "outputId": "532ba8a2-21c0-4640-fcdf-96df3ebb80f7"
@@ -1693,7 +1698,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "PAR17WBSn-Ev",
         "outputId": "03a3bafa-2886-4dfd-fc6f-e2ff7ecfc726"
@@ -2189,7 +2195,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "3scpc7G8usYM",
         "outputId": "44ae783f-5351-4a05-c987-f542263bfe23"
@@ -2236,7 +2243,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "Fi_64HRKoyCd",
         "outputId": "f8bf4c11-702a-4303-c751-f23c04c4fae4"
@@ -3645,7 +3653,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "lHxGxmtHpf9f",
         "outputId": "e459a79a-f395-45ee-c419-4e8ee17fd7ed"
@@ -4588,7 +4597,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "F7g80yu_p_H3",
         "outputId": "d4feab0a-cf9a-4b7b-feeb-ce028254ab22"
@@ -4626,7 +4636,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 1257
         },
         "id": "jCQS4z5XqRla",
         "outputId": "5160deff-e36e-4681-da81-49553af0a7d4"
@@ -5137,7 +5147,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "RQlSquhqqlK8",
         "outputId": "7d00b3fe-05b9-4254-cc44-3e03b783e7c8"
@@ -5163,7 +5174,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "QN-NB7tXrkYB",
         "outputId": "77b4d53e-a51b-4628-f3e8-65665bcdd5a8"
@@ -5612,7 +5624,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "rgw_1FxLvUYi",
         "outputId": "5112e685-d1bc-43ec-f9c3-2425105f7091"
@@ -5694,7 +5707,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "8gM0S7i0vZRB",
         "outputId": "eec38b57-0ab5-4d57-a6af-1dd3cc49bf9b"
