--- a/Reto/2Reto_CienciaAnalisisDatos_Pt2_Equipo55.ipynb
+++ b/Reto/2Reto_CienciaAnalisisDatos_Pt2_Equipo55.ipynb
@@ -582,11 +582,11 @@
         }
       ],
       "source": [
-        "# Plotting the variables bloxplots\n",
+        "# Graficar boxplot\n",
         "plt.rcParams[\"figure.figsize\"] = [10.00, 5.0]\n",
         "plt.rcParams[\"figure.autolayout\"] = True\n",
         "f, axes = plt.subplots(1, 6)\n",
-        "# Numeric data\n",
+        "# separacion de datos numericos\n",
         "df_num = df._get_numeric_data() \n",
         "for (index, col) in enumerate(df_num.columns.values):\n",
         "  sns.boxplot(data = df_num[col], ax = axes[index]).set(xlabel=col)"
